[tool.poetry]
name = "redis-clone"
version = "0.1.0"
description = ""
authors = ["hoxas <hoxas@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gevent = "^21.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
